--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -5,6 +5,7 @@
   --purple: #cdd0f4;
   --standard-margin: 10px;
   --standard-border-radius: 20%;
+  --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 [data-theme='dark'] {
@@ -14,4 +15,5 @@
   --purple: #b47ead;
   --standard-margin: 10px;
   --standard-border-radius: 20%;
+  --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
