--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -4,16 +4,18 @@
   --blue: #cae3f7;
   --purple: #cdd0f4;
   --standard-margin: 10px;
+  --standard-padding: 10px;
   --standard-border-radius: 20%;
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --text-color: #white;
   --yellow: #e2b628;
   --blue: #5b96c2;
   --purple: #b47ead;
   --standard-margin: 10px;
+  --standard-padding: 10px;
   --standard-border-radius: 20%;
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
