--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -12,7 +12,7 @@
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-[data-theme="dark"] {
+[data-theme='dark'] {
   --text-color: #white;
   --yellow: #e2b628;
   --blue: #5b96c2;
