--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -7,7 +7,7 @@
 
   --standard-padding: 10px;
 
-  --standard-border-radius: 10%;
+  --standard-border-radius: 20px;
 
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -21,7 +21,7 @@
 
   --standard-padding: 10px;
 
-  --standard-border-radius: 10%;
+  --standard-border-radius: 20px;
 
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
