--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -17,7 +17,7 @@
 }
 
 [data-theme='dark'] {
-  --text-color: ., whitesmoke;
+  --text-color: whitesmoke;
   --background-color: #bf98a0;
   --blue: #5b96c2;
   --accent-color: #e2b628;
@@ -26,6 +26,12 @@
   --standard-border-radius: 20px;
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   --font-family: 'Mukta', sans-serif;
+  --major-heading-weight: 600;
+  --major-heading-size: 32px;
+  --minor-heading-weight: 500;
+  --minor-heading-size: 24px;
+  --standard-text-weight: 200;
+  --standard-text-size: 20px;
 }
 
 body {
