--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -1,31 +1,41 @@
 :root {
-  --text-color: #black;
-  --yellow: #fffad8;
+  --text-color: black;
+  --background-color: #fffad8;
   --blue: #cae3f7;
-  --purple: #cdd0f4;
+  --accent-color: #cdd0f4;
   --standard-margin: 10px;
-
   --standard-padding: 10px;
-
   --standard-border-radius: 20px;
-
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --font-family: 'Mukta', sans-serif;
+  --major-heading-weight: 600;
+  --major-heading-size: 32px;
+  --minor-heading-weight: 500;
+  --minor-heading-size: 24px;
+  --standard-text-weight: 200;
+  --standard-text-size: 20px;
 }
 
 [data-theme='dark'] {
-  --text-color: #white;
-  --yellow: #e2b628;
+  --text-color: whitesmoke;
+  --background-color: #bf98a0;
   --blue: #5b96c2;
-  --purple: #b47ead;
+  --accent-color: #e2b628;
   --standard-margin: 10px;
-
   --standard-padding: 10px;
-
   --standard-border-radius: 20px;
-
   --standard-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  --font-family: 'Mukta', sans-serif;
+  --major-heading-weight: 600;
+  --major-heading-size: 32px;
+  --minor-heading-weight: 500;
+  --minor-heading-size: 24px;
+  --standard-text-weight: 200;
+  --standard-text-size: 20px;
 }
 
 body {
-  background-color: var(--yellow);
+  background-color: var(--background-color);
+  font-family: var(--font-family);
+  color: var(--text-color);
 }
